Structure of final section (empresa_

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "next": "12.2.3",
     "phosphor-icons": "^1.4.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-hook-inview": "^4.5.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.7",
