--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-google-maps/api": "^2.12.1",
     "next": "12.2.3",
     "phosphor-icons": "^1.4.2",
     "react": "18.2.0",
