--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-google-maps/api": "^2.12.1",
+    "framer-motion": "^7.1.1",
     "next": "12.2.3",
     "phosphor-icons": "^1.4.2",
     "react": "18.2.0",
